--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
 	"dependencies": {
+		"firebase": "^11.1.0",
 		"next": "^15.1.3",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"xml2js": "^0.6.2"
 	},
 	"name": "toy-oil-price",
 	"description": "",
